--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 # Site settings
-title: Klise Theme # site title
+title: Benny Godwin M # site title
 description: >- # site description
   Personal Website and Blog of Benny Godwin M
-  for documentation things that he learned, meet him <a href="https://github.com/piharpi" target="_blank" rel="noopener">@github</a>.
 lang: en-US # default lang
-timezone: Asia/Jakarta # set your timezone
+# timezone: Asia/Jakarta # set your timezone
 # image: assets/img/ogp.png # This image used for Open Graph more info https://ogp.me/
 # repo: https://github.com/piharpi/jekyll-klise # site repo [optional]
 mode: dark # default theme "dark" | "light"
