--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -6,9 +6,9 @@
   url: /
   external: false
 
-- title: Archive
-  url: /archive/
-  external: false
+#- title: Archive
+ # url: /archive/
+  #external: false
 
 - title: About
   url: /about/
