--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,4 +1,4 @@
-- title: Home
+- title: Blog
   url: /
   external: false
 
@@ -10,7 +10,6 @@
   url: /about/
   external: false # set true if you using external link, see below
 
-# Example:
-# - title: github
-#   url: https://github.com/piharpi/jekyll-klise
-#   external: true
+- title: Portfolio
+  url: https://bennygodwinm.github.io/site/
+  external: true
