--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ mode: dark # default theme "dark" | "light"
 author:
   name: Benny Godwin M # author name
   bio: >- # tell to the world
-    Fueled by the dream to contribute significantly to the Aerospace Sector.
+    [Fueled by the dream to contribute significantly to the Aerospace Sector.](https://bennygodwinm.github.io/site/)
   github: BennyGodwinM # github username
   twitter: BennyGodwinM # twitter username
   email: bennygodwinm@gmail.com # email adress
