--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ mode: dark # default theme "dark" | "light"
 author:
   name: Benny Godwin M # author name
   bio: >- # tell to the world
-    [Fueled by the dream to contribute significantly to the Aerospace Sector.](https://bennygodwinm.github.io/site/)
+    Fueled by the dream to contribute significantly to the Aerospace Sector.
   github: BennyGodwinM # github username
   twitter: BennyGodwinM # twitter username
   email: bennygodwinm@gmail.com # email adress
@@ -56,7 +56,7 @@ jekyll_compose:
     description:
 
 # Homepage limit posts
-number_of_posts: 100
+number_of_posts: -1
 
 # Build settings
 # theme: klise
