--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author:
   avatar: /assets/img/avatar.jpg # change with your own avatar
 
 # URL settings
-url: "https://klise.now.sh" #
+url: "https://bennygodwinm.github.io/blog/" #
 baseurl:
 permalink: /:title/
 google_analytics: # leave it blank if not wish
