--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author:
   avatar: /assets/img/avatar.jpg # change with your own avatar
 
 # URL settings
-url: "https://bennygodwinm.github.io/blog/" #
+url: "https://bennygodwin.com" #
 baseurl:
 permalink: /:title/
 google_analytics: # leave it blank if not wish
@@ -56,7 +56,7 @@ jekyll_compose:
     description:
 
 # Homepage limit posts
-number_of_posts: 1000000
+number_of_posts: 100000000000
 
 # Build settings
 # theme: klise
