--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ author:
     Fueled by the dream to contribute significantly to the Aerospace Sector.
   github: BennyGodwinM # github username
   twitter: BennyGodwinM # twitter username
-  email: bennygodwinm@gmail.com # email adress
+  email: benny@bennygodwin.com # email adress
   avatar: /assets/img/avatar.jpg # change with your own avatar
 
 # URL settings
