--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,4 +1,8 @@
 - title: Blog
+  url: https://bennygodwin.com/
+  external: true
+  
+- title: Blog
   url: /
   external: false
 
@@ -8,4 +12,4 @@
 
 - title: About
   url: /about/
-  external: false # set true if you using external link, see below
+  external: false
