--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ mode: dark # default theme "dark" | "light"
 author:
   name: Benny Godwin M # author name
   bio: >- # tell to the world
-    
+    Upcoming Aerospace Engineer
   github: BennyGodwinM # github username
   twitter: BennyGodwinM # twitter username
   email: benny@bennygodwin.com # email adress
